[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testing-template"
version = "0.1.0"
description = "Comprehensive testing framework template"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["testing", "pytest", "coverage", "quality", "automation"]

# Core dependencies
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-mock>=3.12.0",
    "coverage>=7.3.0",
    "factory-boy>=3.3.0",
    "faker>=20.1.0",
    "hypothesis>=6.88.0",
    "freezegun>=1.2.0",
    "responses>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pre-commit>=3.5.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.2.0",
    "pytest-randomly>=3.15.0",
    "pytest-sugar>=0.9.7",
    "pytest-clarity>=1.0.1",
    "pytest-json-report>=1.5.0",
    "factory-boy>=3.3.0",
    "faker>=20.1.0",
    "hypothesis>=6.88.0",
    "freezegun>=1.2.0",
    "responses>=0.24.0",
    "httpx>=0.25.0",
    "respx>=0.20.0",
]

quality = [
    "mutmut>=2.4.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "vulture>=2.10.0",
    "radon>=6.0.0",
    "xenon>=0.9.0",
    "semgrep>=1.45.0",
]

performance = [
    "pytest-benchmark>=4.0.0",
    "locust>=2.17.0",
    "memory-profiler>=0.61.0",
    "psutil>=5.9.0",
    "py-spy>=0.3.14",
]

docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
]

automation = [
    "tox>=4.11.0",
    "nox>=2023.4.22",
    "invoke>=2.2.0",
]

all = [
    "testing-template[dev,test,quality,performance,docs,automation]",
]

[project.urls]
Homepage = "https://github.com/yourusername/testing-template"
Documentation = "https://testing-template.readthedocs.io"
Repository = "https://github.com/yourusername/testing-template"
Issues = "https://github.com/yourusername/testing-template/issues"
Changelog = "https://github.com/yourusername/testing-template/blob/main/CHANGELOG.md"

[project.scripts]
test-runner = "test_framework.cli:main"

[tool.hatch.version]
path = "src/test_framework/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/scripts",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/test_framework"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-unit = "pytest tests/unit {args}"
test-integration = "pytest tests/integration {args}"
test-e2e = "pytest tests/e2e {args}"
test-performance = "pytest tests/performance {args}"
test-cov = "pytest --cov=src/test_framework --cov-report=term-missing {args:tests}"
test-cov-html = "pytest --cov=src/test_framework --cov-report=html {args:tests}"
test-parallel = "pytest -n auto {args:tests}"
lint = "ruff check {args:src tests}"
format = "ruff format {args:src tests}"
type-check = "mypy {args:src}"
quality = ["lint", "type-check", "test"]
mutation = "mutmut run --paths-to-mutate=src/test_framework"

[tool.hatch.envs.performance]
dependencies = [
    "pytest-benchmark>=4.0.0",
    "locust>=2.17.0",
    "memory-profiler>=0.61.0",
    "psutil>=5.9.0",
]

[tool.hatch.envs.performance.scripts]
benchmark = "pytest tests/performance --benchmark-only"
load-test = "locust -f tests/performance/locustfile.py"
profile = "python -m memory_profiler scripts/profile_app.py"

[tool.hatch.envs.docs]
dependencies = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs build/docs"
serve = "sphinx-autobuild docs build/docs"
clean = "rm -rf build/docs"

# Tool configurations
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "--cov=src/test_framework",
    "--cov-report=term-missing",
    "--cov-report=html:build/coverage/html",
    "--cov-report=xml:build/coverage/coverage.xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "e2e: End-to-end tests",
    "performance: Performance tests",
    "slow: Slow running tests",
    "external: Tests requiring external services",
    "database: Tests requiring database",
    "network: Tests requiring network access",
    "security: Security-related tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/test_framework"]
branch = true
omit = [
    "tests/*",
    "src/test_framework/__init__.py",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError", 
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
skip_empty = true
precision = 2
sort = "Cover"

[tool.coverage.html]
directory = "build/coverage/html"
title = "Test Framework Coverage Report"

[tool.coverage.xml]
output = "build/coverage/coverage.xml"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PIE", # flake8-pie
    "A",  # flake8-builtins
    "PL", # pylint
    "TRY", # tryceratops
    "S",  # flake8-bandit
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "TRY003", # avoid specifying long messages outside the exception class
    "PLR0913", # too many arguments to function call
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "S101",  # use of assert detected
    "S311",  # standard pseudo-random generators are not suitable for security
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG", "S", "SLF001", "PLR2004", "S101"]
"src/test_framework/__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["test_framework"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "pytest.*",
    "factory.*",
    "faker.*",
    "hypothesis.*",
    "freezegun.*",
    "responses.*",
    "locust.*",
    "mutmut.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
tests = ["B201", "B301", "B401", "B501", "B601"]
skips = ["B101", "B601"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["test_framework"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true